# trading_sim

./: .gitignore  Cargo.toml  README.md  TODO  config_form.yaml  example_config.yaml
consider/: eth_9k.json
koehn-trade-application/: .env  .eslintrc.js  .gitignore  package-lock.json  package.json
koehn-trade-application/public/: electron.js  index.html
koehn-trade-application/src/: App.css  App.jsx  index.css  index.jsx
koehn-trade-application/src/settings/: Settings.css  Settings.jsx  SettingsError.css  SettingsError.jsx
koehn-trade-application/src/simulation/: BestBot.jsx  Graph.jsx  Poll.jsx  Simulation.css  Simulation.jsx
koehn-trade-application/src/simulation/Graphs/: AverageFitness.jsx  PurchaseHistory.jsx  ValueHistory.jsx
koehn-trade-application/src/utils/: useInterval.js
python/: graphing.py  main.py
src/: lib.rs  main.rs
src/asset/: mod.rs
src/bot/: holdings.rs  mod.rs  traits.rs
src/config/: mod.rs
src/price_data/: mod.rs
src/simulation/: mod.rs
src/village/: mod.rs
tests/: bot.rs
tests/test_data/: example_config.yaml
