[package]
name = "rust_playground"
version = "0.1.0"
authors = ["John Koehn <koehn.john95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
chrono = "0.4"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"