[package]
name = "rust_playground"
version = "0.1.0"
authors = ["John Koehn <koehn.john95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "trading_sim"
path = "src/lib.rs"

[dependencies]
rand = "0.7.3"
chrono = "0.4"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.8.13"
approx = "0.4.0"
actix-web = "3.2.0"
regex = "1.4.2"
alphanumeric-sort = "1.4.0"